fix when contacts/messages are active with up/down keys (closes #11)

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -453,6 +453,7 @@
       ._2fq0t ._1AKfk {
         background-color: var(--darker) !important; }
         /* On event. */
+        .k1feT ._2fq0t ._2EXPL._1f1zm,
         .k1feT ._2fq0t ._2EXPL:hover {
           background-color: var(--dark) !important; }
       /* Search element */
@@ -591,6 +592,7 @@
     ._2yeJ5 .matched-text {
       color: var(--accent) !important; }
     /* On event. */
+    .YAPQk ._1f1zm > ._3j7s9,
     .YAPQk ._3j7s9:hover {
       background-color: var(--dark) !important; }
 
