--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -794,30 +794,27 @@
   /* Close button. */
   footer .rstyJ > div:last-child {
     position: relative;
-    margin: 0 18px 5px 18px !important;
+    margin: 0 8px 5px 8px !important;
     background-color: transparent !important; }
   /* Make the button larger. */
   footer .rstyJ > div:last-child > div svg {
-    padding: 28px;
+    padding: 18px;
     border-radius: 6px;
-    background-color: var(--dark);
-  }
+    background-color: var(--dark); }
 
   /* Mention group members. */
   .Uukb4 {
     color: var(--light);
     border-left: none !important;
-    background-color: var(--dark) !important;
-  }
+    background-color: var(--dark) !important; }
   /* Wrapper. */
   .Uukb4 ._3v_lq {
     transition: 300ms ease-in-out !important;
-    background-color: transparent !important;
-  }
+    background-color: transparent !important; }
+  /* Active. */
   .Uukb4 .j5Hcb._3v_lq,
   .Uukb4 ._3v_lq:hover {
-    background-color: var(--darker) !important;
-  }
+    background-color: var(--darker) !important; }
 
 
   /* Select messages. */
