tweak main app container rounded corners and make shadow more visible

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -1194,7 +1194,8 @@
 
     /* App wrapper. */
     #app .app {
-      box-shadow: 0 0 0 1px var(--darker), 0 0 8px 0px var(--shadow); }
+      border-radius: 5px;
+      box-shadow: 0 4px 24px -2px var(--shadow); }
 
     /* Fullscreen. */
     /*[[fullscreen]]*/
