--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -3,7 +3,9 @@
 @description  A customizable theme for WhatsApp.
 @namespace    github.com/vednoc/onyx
 @homepageURL  https://github.com/vednoc/onyx
+@supportURL   https://github.com/vednoc/onyx/issues
 @updateURL    https://rawgit.com/vednoc/onyx/master/WhatsApp.user.css
+@updateURL    https://gitlab.com/vednoc/onyx/raw/master/WhatsApp.user.css
 @version      1.1.6
 @author       vednoc
 @license      MIT
