--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -105,7 +105,7 @@
   EOT;
   enable "Enable" <<<EOT
   /* Fullscreen. *\/
-  .app-wrapper-web ._3dqpi {
+  .app-wrapper-web ._3dqpi, body ._1abwg {
     height: calc(100% - 0px);
     top: 0px;
     width: 100%; }
