--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -857,18 +857,18 @@
   /* Bubble tails -- experimental. */
   .tail .tail-container {
     width: 0px !important;
-    height: 12px !important;
+    height: 10px !important;
     z-index: 0 !important;
     border-top: 12px solid var(--darker);
     background: none !important; }
     .tail.message-in .tail-container {
-      left: -12px; top: 0px;
-      border-left: 12px solid transparent;
-      border-radius: 6px 0 0 0; }
+      left: -10px !important; top: 0px;
+      border-left: 10px solid transparent;
+      border-radius: 5px 0 0 0; }
     .tail.message-out .tail-container {
-      right: -12px; top: 0px;
-      border-right: 12px solid transparent;
-      border-radius: 0 6px 0 0; }
+      right: -10px !important; top: 0px;
+      border-right: 10px solid transparent;
+      border-radius: 0 5px 0 0; }
 
     /* Disable tails everywhere. */
     /*[[tails]]*/
