--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -531,13 +531,18 @@
   .TYhk9 {
     border-color: var(--darker) !important;
     background-color: var(--dark) !important;
-    box-shadow: 0 0px 8px 2px var(--shadow) !important;
-  }
+    box-shadow: 0 0px 8px 2px var(--shadow) !important; }
   /* Buttons. */
   .TYhk9 ._1sB6s {
     color: var(--light) !important;
-    background-color: var(--darker) !important;
-  }
+    background-color: var(--darker) !important; }
+
+    /* Shared contact button colors. */
+    .b332w {
+      color: var(--accent) !important; }
+    /* View contact. */
+    ._36ApL {
+      background-color: transparent !important; }
 
   /* Hide 'Type a message' once focused. */
   ._3F6QL._2WovP.focused ._39LWd {
