fix shared contact text (closes #16)

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -540,6 +540,9 @@
     /* Shared contact button colors. */
     .b332w {
       color: var(--accent) !important; }
+    /* Shared contact text. */
+    .AVd_p {
+      color: var(--lighter) !important; }
     /* View contact. */
     ._36ApL {
       background-color: transparent !important; }
