fix white bg for zoom in/out when uploading new avatar (closes #17)

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -429,6 +429,9 @@
       /* Text color. */
       ._2fq0t * {
         color: var(--light); }
+      /* Zoom in/out. */
+      ._2LALH {
+        background-color: var(--dark) !important; }
 
     /* Option/select elements. */
     .uyEaY select {
